--- a/3-infraestructura-software.tex
+++ b/3-infraestructura-software.tex
@@ -61,7 +61,7 @@ La versión utilizada en el proyecto ha sido la 5.3.1, última versión estable 
 
 \section{ICE}
 
-ICE o\emph{Internet Communication Engine} es un entorno RPC orientado a objetos desarrollado por Zeroc con soporte para lenguajes como C++, C\#, Java, JavaScript, y Python entre otros, y SO's como Linux, Mac OS X y Windows, que nos permite crear conexiones e interacciones de red entre máquinas con servidores corriendo en diferentes lenguajes y/o SO's. Estas conexiones pueden ser síncronas o asíncronas, usando variedad de protocolos de red como TCP, UDP ó SSL/TTS\\
+ICE o \emph{Internet Communication Engine} es un entorno RPC orientado a objetos desarrollado por Zeroc con soporte para lenguajes como C++, C\#, Java, JavaScript, y Python entre otros, y SO's como Linux, Mac OS X y Windows, que nos permite crear conexiones e interacciones de red entre máquinas con servidores corriendo en diferentes lenguajes y/o SO's. Estas conexiones pueden ser síncronas o asíncronas, usando variedad de protocolos de red como TCP, UDP ó SSL/TTS\\
 
 ICEJS, o ICE for JavaScript es un \textit{plugin} que se le puede añadir a ICE el cual añade la funcionalidad de conexiones mediante \textit{websockets} lo que nos permite conectar navegadores a través de JavaScript a los protocolos mas comunes de ICE. \\
 
@@ -406,7 +406,7 @@ Como protocolo de transporte soporta TCP, UDP y SCTP. Esto nos permite configura
 \begin{figure}[htb]
 \centering
 \includegraphics[width=0.9\textwidth]{RTCDataChannel_Capabilities}
-\caption{RTCDataChannel Capabilities.}
+\caption{Capacidades de RTCDataChannel.}
 \label{fig:datachannel_capabilities}
 \end{figure}
 
